two-way-binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>My First Angular Task</h1>
 <app-name-display></app-name-display>
 <app-age-display></app-age-display>
+<app-two-way-binding></app-two-way-binding>
